--- a/src/index.css
+++ b/src/index.css
@@ -149,3 +149,53 @@ h1 {
   color: white;
   background-color: #ed3d23;
 }
+
+/* iPhones (portrait and landscape) */
+@media only screen and (max-device-width: 514px) {
+  h1 {
+    margin-top: 17%;
+    font-size: 63px;
+    text-align: left;
+  }
+  .products-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100%;
+    overflow-y: scroll;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    box-shadow: 0px 10px 13px -7px #d5cdef,
+      5px 5px 15px 5px rgba(139, 127, 180, 0.78);
+    margin: 12%;
+    width: 252px;
+  }
+}
+
+/* Portrait orientation for iPads */
+@media only screen and (min-device-width: 768px) and (max-device-width: 824px) and (orientation: portrait) {
+  body {
+    background-color: lightpink;
+  }
+
+  h1 {
+    margin-top: 17%;
+    font-size: 100px;
+    text-align: center;
+  }
+
+  .products-container {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    height: 100%;
+    overflow-y: scroll;
+  }
+  .product {
+    display: flex;
+    flex-direction: column;
+    width: 50%;
+  }
+}
